kubernetes/storage/minio/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
spec:
  hostnames:
    - minio-api.wagner.gg
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: network
      sectionName: https
  rules:
  - backendRefs:
    - kind: Service
      name: minio
      port: 9000
