kubernetes/storage/minio/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: minio-api
  namespace: storage
spec:
  ingressClassName: nginx-private
  rules:
  - host: minio-api.wagner.gg
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              name: main
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - minio-api.wagner.gg
    secretName: minio-api.wagner.gg
